Version 1.5 (2024-03-26)
========================

Minimum plugin SDK (for build): 1.12.1
Minimum Orthanc runtime: 1.12.1

* No functional changes !
* updated to Orthanc Framework 1.12.1


Version 1.4 (2023-02-06)
========================

=> Recommaneded SDK version: 1.11.2 <=
=> Minimum SDK version: 1.5.0 <=

* updated to Orthanc Framework and to SDK 1.11.3: improved HTTP Client logs + avoid possible
  crash in Job GetContent.
* new "PeerConnectivityTimeout" configuration to configure the HTTP Timeout when checking
  if a remote peer has the transfer plugin enabled in /transfers/peers GET route.
  Default value is 2 which was the hardcoded default value in previous versions.

Version 1.3 (2022-11-30)
========================

* new "SenderTransferID" option when creating a transfer.  This id is added as an HTTP Header
  ("sender-transfer-id") in every outgoing request that relates to this transfer and can be used 
  e.g, by a load balancer to route all requests from a single transfer to the same Orthanc.
  If no "SenderTransferID" is provided, a UUID is generated by the plugin.  
  This header is only used in PushMode.
  Note that, when generated by the plugin, the "sender-transfer-id" is NOT the job id (the job id
  does not exist yet at this time) and is NOT the transaction id that is actually generated on the
  receiver side.

Version 1.2 (2022-07-12)
========================

=> Minimum SDK version: 1.5.0 <=

* improved error reporting
* fixed transfer error occuring when the resources to transfer did not fit inside the
  plugin cache (512 MB by default).  The error generated high CPU usage on the sending side
  while compressing large files instead of a simple bucket and in NetworkProtocolError
  on the receiving side.

Version 1.1 (2022-06-22)
========================

* Added "Resources" and "Originator" in the jobs "Content".  "Resources"
  is copied directly from the query that created the job.