@@ -181,6 +181,8 @@ namespace OrthancPlugins
       std::map<std::string, std::string> headers;
       job_.query_.GetHttpHeaders(headers);
 
+      headers["Content-Type"] = "application/json";
+
       if (!DoPostPeer(answer, job_.peers_, job_.peerIndex_, URI_LOOKUP, lookup, job_.maxHttpRetries_, headers))
       {
         LOG(ERROR) << "Cannot retrieve the list of instances to pull from peer \"" 
