@@ -1,3 +1,10 @@
+Pending changes in the mainline
+===============================
+
+* now setting "Content-Type" HTTP headers in outgoing POST requests.
+  (https://discourse.orthanc-server.org/t/transfer-accelerator-plugin-http-header-compatibility/5725)
+
+
 Version 1.5 (2024-03-26)
 ========================
 
